--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -2,10 +2,30 @@
 <html>
     <head>
         <title>AWS thingy page</title>
-        <link rel="stylesheet" href=" {{url_for('static',filename='home.css')}} ">
+        <link rel="stylesheet" href=" {{url_for('static',filename='first.css')}} ">
     </head>
     <body>
-        <h1>Welcome to our awesome page!</h1>
-       <p>under construction :p</p> 
+        <div class="box">
+            <div class="square"></div>
+        </div>
+        <div class="container">
+            <h2>Select service</h1>
+            <a class="btn"  href="{{ url_for('ScamTextDetect') }}">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Scam text detector
+            </a>
+            <br><br>
+            <a class="btn 1" href="{{ url_for('ScamCallDetect') }}">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Scam call detector
+            </a>
+        </div>
+
     </body>
 </html>
