--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>AWS thingy page</title>
+        <title>Scam Detector</title>
         <link rel="stylesheet" href=" {{url_for('static',filename='first.css')}} ">
     </head>
     <body>
