--- a/web_app/static/scamtext.css
+++ b/web_app/static/scamtext.css
@@ -100,3 +100,78 @@ body {
     background: #a9a9a9;
 
 }
+
+.back {
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.back a {
+    position: absolute;
+    width: 300px;
+    height: 60px;
+    display: inline-block;
+    background: #fff;
+    margin: 20px;
+    margin-bottom: 700px;
+    margin-right: 500px;
+}
+
+.back a:before,
+.back a:after{
+    content: '';
+    position: absolute;
+    inset: 0;
+    background: #f00;
+    transition: 0.3s;
+}
+
+.back a:nth-child(1):before,
+.back a:nth-child(1):after{
+    background: linear-gradient(45deg, #00ccff,
+     #031321, #031321, #d400d4);
+    
+}
+
+.back a:hover:before {
+    inset: -5px;
+}
+
+.back a:hover:after {
+    inset: -5px;
+    filter: blur(10px);
+}
+
+.back a span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    background: #031321;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2em;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #fff;
+    border: 2px solid #eee;
+    overflow: hidden;
+}
+
+.back a span::before {
+    content:'';
+    position: absolute;
+    top: 0;
+    left: -50%;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.075);
+    transform:skew(45deg);
+}
