loading screen fix

--- a/web_app/templates/scamtextdetector.html
+++ b/web_app/templates/scamtextdetector.html
@@ -2,15 +2,6 @@
 <head>
     <title>Scam-Text-Detector</title>
     <link rel="stylesheet" href="{{url_for('static', filename='scamtext.css')}}">
-    <script>
-        function navigate() {
-            //window.location.href = 'output';  // Redirects user to the /output when analyse is finished
-        }
-        function load(){
-            //fetch('/').then(navigate); // Analyse and then calls navigate() function
-        }
-      
-    </script>
 </head>
 <body>
     <div class="back">
@@ -18,7 +9,7 @@
             <span>Back</span>
         </a>
     </div>
-    <div class="container">
+    <div class="container" id="content">
         <h2>Scam Text Detector</h2>
         <form action="{{ url_for('ScamTextInput') }}" method="POST">
             <div class="inputbox">
@@ -26,10 +17,19 @@
                 <span>Paste text here</span>
             </div>
             <div class="inputbox">
-                <input type="submit" value="Submit" name="submit" onclick="load();">
+                <input type="submit" value="Submit" name="submit" onclick="loading();">
             </div>
         </form>
     </div>
-    
+    <div class="popup" id="popup">
+        <img src = "static/app_images/loading.gif">
+        <h2>This process may take a while. Do not close or refresh the page!</h2>
+    </div>
+    <script>
+        let popup = document.getElementById("popup");
+        function loading(){
+            popup.classList.add("open-popup")
+        }
+    </script>
 </body>
 </html>
