--- a/web_app/static/scamtext.css
+++ b/web_app/static/scamtext.css
@@ -175,3 +175,38 @@ body {
     background: rgba(255, 255, 255, 0.075);
     transform:skew(45deg);
 }
+
+.popup {
+    width: 400px;
+    border-radius: 6px;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    text-align:center;
+    padding: 125px 30px 30px;
+    color:#333;
+    visibility: hidden;
+    background: white
+}
+
+.popup img{
+    width:100px;
+    margin-top:-50%;
+    border-radius: 20%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    background-color: black;
+}
+
+.popup h2{
+    font-size:18px;
+    font-weight:500;
+    
+    margin: 30px 0 10px;
+}
+
+.open-popup {
+    visibility: visible;
+    top:50%;
+    transform: translate(-50%,-50%) scale(1);
+}
