shifting main.py into web_app

--- a/web_app/templates/scamtextdetector.html
+++ b/web_app/templates/scamtextdetector.html
@@ -23,7 +23,7 @@
     </div>
     <div class="popup" id="popup">
         <img src = "static/app_images/loading.gif">
-        <h2>This process may take a while. Do not close or refresh the page!</h2>
+        <h2>This process will take several minutes. Do not close or refresh the page!</h2>
     </div>
     <script>
         let popup = document.getElementById("popup");
