--- a/web_app/templates/scamcalldetector.html
+++ b/web_app/templates/scamcalldetector.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 <head>
     <title>Scam-Call-Detector</title>
+    <link rel="stylesheet" href="{{url_for('static', filename='scamcall.css')}}">
 </head>
 <body>
-
+    <div class="back">
+        <a href="{{url_for('home')}}">
+            <span>Back</span>
+        </a>
+    </div>
+    <div class="container" id="content">
+        <h2>Scam Call Detector</h2>
+        <form action="{{ url_for('ScamTextInput') }}" method="POST">
+            <input type="file" name="audio file" required="required">
+            <div class="inputbox">
+                <input type="submit" value="Submit" name="submit" onclick="loading();">
+            </div>
+        </form>
+    </div>
+    <div class="popup" id="popup">
+        <img src = "static/app_images/loading.gif">
+        <h2>This process may take a while. Do not close or refresh the page!</h2>
+    </div>
+    <script>
+        let popup = document.getElementById("popup");
+        function loading(){
+            popup.classList.add("open-popup")
+        }
+    </script>
     
 </body>
 </html>
