--- a/web_app/templates/output.html
+++ b/web_app/templates/output.html
@@ -11,7 +11,7 @@
     </div>
     <div class="container">
         <p><b>Analysed text</b>:{{text}}</p>
-        <h2>Scam text:{{status}} ---------------- Confidence:{{confidence}}</h2>  
+        <h2>Scam text:{{status}} ---------------- Confidence:{{confidence}}%</h2>  
     </div>
     
 </body>
